--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <a href="./services.html">services</a>
+<a href="./register.html">register</a>
+<a href="./contact.html">contact</a>
+<a href="./coin_finder.html">contact</a>
+<a href="./blog_main_page.html">blog_main_page</a>
+<a href="./blog.html">blog</a>
+  <a href="./auction.html">auction</a>
+  <a href="./about.html">about</a>
+
 </body>
 </html>
